changed damageModifier value for notveryeffective situations to an action fraction ½ instead of a decimal so as to avoid making all the table cells too large

--- a/project/styles/pokemon-type-matchup-tool.css
+++ b/project/styles/pokemon-type-matchup-tool.css
@@ -339,7 +339,7 @@ table, th, td {
 
 th, td {
     padding: 0.5rem;
-    max-width: 26px;
+    max-width: 25px;
     aspect-ratio: 1/1;
     width: 5%;
 }
